--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
       <button id="stop">Pare!</button>
       <button id="speak">Fale!</button>
     </div>
+
+    <script src="/script.js"></script>
   </body>
 </html>
